# migu3d-decoder

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
.github/workflows/: build-linux-x86_64.yml  build-windows.yml
include/migu/: MiguDecoder.h  ValidationHelper.h  ValidatorBase.h  WavValidator.h  WinArgHelper.h  WindowsWorkarounds.h  config.h.in  constants.h  endian.h
src/: MiguDecryptor.cpp  WavValidator.cpp  WinArgHelper.cpp  WindowsWorkarounds.cpp  main.cpp
